--- a/package.json
+++ b/package.json
@@ -4,25 +4,31 @@
     "description": "The purpose of the API is to put the learnings of the 'process,async' models into practice",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon app.js",
-        "prettier:write": "npx prettier --write ."
+        "start": "nodemon server.js",
+        "prettier:write": "npx prettier --write .",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "async": "^3.2.4",
+        "axios": "^1.2.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^2.3.3",
-        "nodemon": "^2.0.20"
+        "nodemon": "^2.0.20",
+        "supertest": "^6.3.1"
     },
     "devDependencies": {
+        "@types/jest": "^29.2.3",
+        "@types/supertest": "^2.0.12",
         "eslint": "^8.28.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.26.0",
+        "jest": "^29.3.1",
         "prettier": "2.8.0"
     }
 }
