--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "The purpose of the API is to put the learnings of the 'process,async' models into practice",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon server.js",
+        "dev": "sudo docker compose --env-file .env up -d && nodemon server.js",
         "prettier:write": "npx prettier --write .",
         "test": "jest",
         "watch": "jest --watchAll"
@@ -15,6 +15,7 @@
     "dependencies": {
         "async": "^3.2.4",
         "axios": "^1.2.0",
+        "commander": "^9.4.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "morgan": "^1.10.0",
